reorden de carpetas unificadas

--- a/paginas/productos/Productos.html
+++ b/paginas/productos/Productos.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./Productos.css">
 
 
     <title>Libreria</title>
@@ -32,7 +32,7 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="../index.html"><img
-                                        src="img/iconos/libro-abierto.png" alt=""></a>
+                                        src="/public/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link index__nav__item" href="">Productos</a>
@@ -47,10 +47,10 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0  index__nav__icons d-flex">
 
                             <li class="nav-item">
-                                <a class="nav-link" href=""><img src="img/iconos/usuario.png" alt=""></a>
+                                <a class="nav-link" href=""><img src="/public/iconos/usuario.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href=""><img src="img/iconos/carrito-de-compras.png" alt=""></a>
+                                <a class="nav-link" href=""><img src="/public/iconos/carrito-de-compras.png" alt=""></a>
                             </li>
 
                         </ul>
@@ -68,7 +68,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="img/landing/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="/public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -110,7 +110,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="img/landing/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="/public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -151,7 +151,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="img/landing/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="/public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -192,7 +192,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="img/landing/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="/public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
