--- a/paginas/carrito/Carrito.html
+++ b/paginas/carrito/Carrito.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Carrito.css">
     <title>Carrito</title>
 </head>
 
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-warning">
             <div class="container-fluid">
-                <img src="/public/open-book.png" alt="open book logo" class="logo">
+                <img src="/public/iconos/libro-abierto.png" alt="open book logo" class="logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
