Agregado de carpeta

--- a/paginas/carrito/Carrito.html
+++ b/paginas/carrito/Carrito.html
@@ -12,26 +12,43 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-warning">
+    <header class="index__nav">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <img src="/public/iconos/libro-abierto.png" alt="open book logo" class="logo">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contactos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">FAQ</a>
-                        </li>
-                    </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="d-flex justify-content-evenly">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html"><img
+                                        src="/public/iconos/libro-abierto.png" alt=""></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link index__nav__item" href="contenido/productos.html">Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link index__nav__item" href="">Contactos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link index__nav__item" href="">FAQ</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0  index__nav__icons d-flex">
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href=""><img src="public/iconos/usuario.png" alt=""></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href=""><img src="/public/iconos/carrito-de-compras.png"
+                                            alt=""></a>
+                                </li>
+                            
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
