--- a/index.html
+++ b/index.html
@@ -1,4 +1,65 @@
-<?php  include("header.php") ?>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/paginas/productos/Productos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
+
+
+    <title>Libreria</title>
+
+
+</head>
+
+<body class="">
+    <header class="index__nav">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="d-flex justify-content-evenly">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html"><img
+                                        src="/public/iconos/libro-abierto.png" alt=""></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link index__nav__item" href="contenido/productos.html">Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link index__nav__item" href="">Contactos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link index__nav__item" href="">FAQ</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0  index__nav__icons d-flex">
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href=""><img src="public/iconos/usuario.png" alt=""></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href=""><img src="/public/iconos/carrito-de-compras.png"
+                                            alt=""></a>
+                                </li>
+                            
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
     <article class="index__article">
@@ -12,7 +73,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="contenido/img/landing/Libro2.jpg" class="img-fluid rounded-start"
+                                        <img src="public/caratulas/Libro2.jpg" class="img-fluid rounded-start"
                                             alt="...">
                                     </div>
                                     <div class="col-md-8">
@@ -38,7 +99,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="contenido/img/landing/Libro2.jpg" class="img-fluid rounded-start"
+                                        <img src="public/caratulas/Libro2.jpg" class="img-fluid rounded-start"
                                             alt="...">
                                     </div>
                                     <div class="col-md-8">
@@ -64,7 +125,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="contenido/img/landing/Libro3.jpg" class="img-fluid rounded-start"
+                                        <img src="public/caratulas/Libro3.jpg" class="img-fluid rounded-start"
                                             alt="...">
                                     </div>
                                     <div class="col-md-8">
@@ -112,7 +173,7 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="contenido/img/landing/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -133,7 +194,7 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="contenido/img/landing/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -149,29 +210,7 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="contenido/img/landing/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
-                        <div class="card-body">
-                            <h5 class="card-title display-5 text-center">Nombre libro</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                                content.</p>
-                            <div class="d-flex justify-content-center ">
-                                <a href=""
-                                    class="btn btn-warning">Ver
-                                    mas</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-
-
-
-                <div class="d-flex justify-content-center index__article__section2__card">
-                    <div class="card" style="width: 20rem;">
-                        <img src="contenido/img/landing/Libro3.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -190,9 +229,31 @@
 
 
 
+
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="contenido/img/landing/Libro3.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <div class="card-body">
+                            <h5 class="card-title display-5 text-center">Nombre libro</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <div class="d-flex justify-content-center ">
+                                <a href=""
+                                    class="btn btn-warning">Ver
+                                    mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+                <div class="d-flex justify-content-center index__article__section2__card">
+                    <div class="card" style="width: 20rem;">
+                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -208,7 +269,7 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="contenido/img/landing/Libro3.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
