--- a/paginas/contacto/contacto.html
+++ b/paginas/contacto/contacto.html
@@ -133,7 +133,7 @@
 
 
         <div class="col-12 text-center">
-            <button class="btn btn-primary" type="submit">Submit form</button>
+            <button class="btn btn-primary" type="submit">Enviar consulta</button>
           </div>
         
 
