Termine de hacer el html de FAQ

--- a/paginas/productos/Productos.html
+++ b/paginas/productos/Productos.html
@@ -31,8 +31,8 @@
                     <div class="d-flex justify-content-evenly">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html"><img
-                                        src="/public/iconos/libro-abierto.png" alt=""></a>
+                                <a class="nav-link active" aria-current="page" href="../../index.html"><img
+                                        src="../../public/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link index__nav__item" href="">Productos</a>
@@ -41,16 +41,16 @@
                                 <a class="nav-link index__nav__item" href="">Contactos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="">FAQ</a>
+                                <a class="nav-link index__nav__item" href="../FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0  index__nav__icons d-flex">
 
                             <li class="nav-item">
-                                <a class="nav-link" href=""><img src="/public/iconos/usuario.png" alt=""></a>
+                                <a class="nav-link" href=""><img src="../../public/iconos/usuario.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href=""><img src="/public/iconos/carrito-de-compras.png" alt=""></a>
+                                <a class="nav-link" href=""><img src="../../public/iconos/carrito-de-compras.png" alt=""></a>
                             </li>
 
                         </ul>
@@ -68,7 +68,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="/public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -110,7 +110,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="/public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -151,7 +151,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="/public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -192,7 +192,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="/public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
