--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/paginas/productos/Productos.css">
+    <link rel="stylesheet" href="paginas/productos/Productos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,16 +32,16 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html"><img
-                                        src="/public/iconos/libro-abierto.png" alt=""></a>
+                                        src="public/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="contenido/productos.html">Productos</a>
+                                <a class="nav-link index__nav__item" href="paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link index__nav__item" href="">Contactos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="">FAQ</a>
+                                <a class="nav-link index__nav__item" href="paginas/FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0  index__nav__icons d-flex">
@@ -50,7 +50,7 @@
                                     <a class="nav-link" href=""><img src="public/iconos/usuario.png" alt=""></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href=""><img src="/public/iconos/carrito-de-compras.png"
+                                    <a class="nav-link" href=""><img src="public/iconos/carrito-de-compras.png"
                                             alt=""></a>
                                 </li>
                             
