--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="paginas/productos/Productos.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,8 +19,8 @@
 
 </head>
 
-<body class="">
-    <header class="index__nav">
+<body>
+    <header class="nav__global">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -28,37 +29,36 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="d-flex justify-content-evenly">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                    <div class="nav__global__container">
+                        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html"><img
                                         src="public/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="paginas/productos/Productos.html">Productos</a>
+                                <a class="nav-link nav__global__item"
+                                    href="paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="">Contactos</a>
+                                <a class="nav-link nav__global__item" href="paginas/contacto/contacto.html">Contactos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="paginas/FAQ/FAQ.html">FAQ</a>
+                                <a class="nav-link nav__global__item" href="paginas/FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0  index__nav__icons d-flex">
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href=""><img src="public/iconos/usuario.png" alt=""></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href=""><img src="public/iconos/carrito-de-compras.png"
-                                            alt=""></a>
-                                </li>
-                            
+                        <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
+                            <li class="nav-item">
+                                <a class="nav-link" href="paginas/perfil/Perfil.html"><img src="public/iconos/usuario.png" alt=""></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="paginas/carrito/Carrito.html"><img src="public/iconos/carrito-de-compras.png" alt=""></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
+
     </header>
 
 
@@ -73,8 +73,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="public/caratulas/Libro2.jpg" class="img-fluid rounded-start"
-                                            alt="...">
+                                        <img src="public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -99,8 +98,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="public/caratulas/Libro2.jpg" class="img-fluid rounded-start"
-                                            alt="...">
+                                        <img src="public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -125,8 +123,7 @@
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
                                 <div class="row g-0">
                                     <div class="col-md-4 index__carousel__card__img">
-                                        <img src="public/caratulas/Libro3.jpg" class="img-fluid rounded-start"
-                                            alt="...">
+                                        <img src="public/imagenes/Libro3.jpg" class="img-fluid rounded-start" alt="...">
                                     </div>
                                     <div class="col-md-8">
                                         <div class="card-body">
@@ -173,14 +170,13 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <div class="d-flex justify-content-center ">
-                                <a href=""
-                                    class="btn btn-warning">Ver
+                                <a href="" class="btn btn-warning">Ver
                                     mas</a>
                             </div>
                         </div>
@@ -194,14 +190,13 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <div class="d-flex justify-content-center ">
-                                <a href=""
-                                    class="btn btn-warning">Ver
+                                <a href="" class="btn btn-warning">Ver
                                     mas</a>
                             </div>
                         </div>
@@ -210,14 +205,13 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <div class="d-flex justify-content-center ">
-                                <a href=""
-                                    class="btn btn-warning">Ver
+                                <a href="" class="btn btn-warning">Ver
                                     mas</a>
                             </div>
                         </div>
@@ -232,14 +226,13 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <div class="d-flex justify-content-center ">
-                                <a href=""
-                                    class="btn btn-warning">Ver
+                                <a href="" class="btn btn-warning">Ver
                                     mas</a>
                             </div>
                         </div>
@@ -253,14 +246,13 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <div class="d-flex justify-content-center ">
-                                <a href=""
-                                    class="btn btn-warning">Ver
+                                <a href="" class="btn btn-warning">Ver
                                     mas</a>
                             </div>
                         </div>
@@ -269,14 +261,13 @@
 
                 <div class="d-flex justify-content-center index__article__section2__card">
                     <div class="card" style="width: 20rem;">
-                        <img src="public/caratulas/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
+                        <img src="public/imagenes/Libro2.jpg" class="card-img-top" alt="mapa_avatar">
                         <div class="card-body">
                             <h5 class="card-title display-5 text-center">Nombre libro</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <div class="d-flex justify-content-center ">
-                                <a href=""
-                                    class="btn btn-warning">Ver
+                                <a href="" class="btn btn-warning">Ver
                                     mas</a>
                             </div>
                         </div>
