--- a/paginas/carrito/Carrito.html
+++ b/paginas/carrito/Carrito.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./Carrito.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Carrito</title>
 </head>
 
 <body>
-    <header class="index__nav">
+    <header class="nav__global">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -21,37 +22,36 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="d-flex justify-content-evenly">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                    <div class="nav__global__container">
+                        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html"><img
+                                <a class="nav-link active" aria-current="page" href="/index.html"><img
                                         src="/public/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="contenido/productos.html">Productos</a>
+                                <a class="nav-link nav__global__item"
+                                    href="/paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="">Contactos</a>
+                                <a class="nav-link nav__global__item" href="/paginas/contacto/contacto.html">Contactos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="">FAQ</a>
+                                <a class="nav-link nav__global__item" href="/paginas/FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0  index__nav__icons d-flex">
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href=""><img src="public/iconos/usuario.png" alt=""></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href=""><img src="/public/iconos/carrito-de-compras.png"
-                                            alt=""></a>
-                                </li>
-                            
+                        <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/paginas/perfil/Perfil.html"><img src="/public/iconos/usuario.png" alt=""></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/paginas/carrito/Carrito.html"><img src="/public/iconos/carrito-de-compras.png" alt=""></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
+
     </header>
     <main>
         <div class="carrito_main">
