--- a/paginas/productos/Productos.html
+++ b/paginas/productos/Productos.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Productos.css">
+    <link rel="stylesheet" href="/style.css">
 
 
     <title>Libreria</title>
@@ -19,7 +20,7 @@
 </head>
 
 <body class="productos__body">
-    <header class="index__nav">
+    <header class="nav__global">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -28,36 +29,36 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="d-flex justify-content-evenly">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                    <div class="nav__global__container">
+                        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../../index.html"><img
-                                        src="../../public/iconos/libro-abierto.png" alt=""></a>
+                                <a class="nav-link active" aria-current="page" href="/index.html"><img
+                                        src="/public/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="">Productos</a>
+                                <a class="nav-link nav__global__item"
+                                    href="/paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="">Contactos</a>
+                                <a class="nav-link nav__global__item" href="/paginas/contacto/contacto.html">Contactos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link index__nav__item" href="../FAQ/FAQ.html">FAQ</a>
+                                <a class="nav-link nav__global__item" href="/paginas/FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0  index__nav__icons d-flex">
-
+                        <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
                             <li class="nav-item">
-                                <a class="nav-link" href=""><img src="../../public/iconos/usuario.png" alt=""></a>
+                                <a class="nav-link" href="/paginas/perfil/Perfil.html"><img src="/public/iconos/usuario.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href=""><img src="../../public/iconos/carrito-de-compras.png" alt=""></a>
+                                <a class="nav-link" href="/paginas/carrito/Carrito.html"><img src="/public/iconos/carrito-de-compras.png" alt=""></a>
                             </li>
-
                         </ul>
                     </div>
                 </div>
             </div>
         </nav>
+
     </header>
 
     <h1>Productos</h1>
@@ -68,7 +69,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="../../public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -110,7 +111,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="../../public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -151,7 +152,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="../../public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
@@ -192,7 +193,7 @@
             <div class="card mb-3" style="max-width: 1400px;">
                 <div class="row g-0">
                     <div class="col-md-2 productos__section__cards__img">
-                        <img src="../../public/caratulas/Libro2.jpg" class="img-fluid rounded-start" alt="...">
+                        <img src="../../public/imagenes/Libro2.jpg" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-10">
                         <div class="card-body d-flex productos__section__cards">
