corrige error de tipeo en nav

--- a/paginas/FAQ/FAQ.html
+++ b/paginas/FAQ/FAQ.html
@@ -44,7 +44,7 @@
                                     href="/paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav__global__item" href="/paginas/contacto/contacto.html">Contactos</a>
+                                <a class="nav-link nav__global__item" href="/paginas/contacto/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item" href="/paginas/FAQ/FAQ.html">FAQ</a>
