--- a/paginas/abm-administrador/ABMadministrador.html
+++ b/paginas/abm-administrador/ABMadministrador.html
@@ -9,7 +9,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./ABMadministrador.css">
     <link rel="stylesheet" href="/style.css">
-    <title>Carrito</title>
+    <title>Admin</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                                     href="/paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav__global__item" href="/paginas/contacto/contacto.html">Contactos</a>
+                                <a class="nav-link nav__global__item" href="/paginas/contacto/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item" href="/paginas/FAQ/FAQ.html">FAQ</a>
@@ -59,7 +59,7 @@
                 <table class="table table-light table-striped">
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
+                            <th scope="col">idUsuario</th>
                             <th scope="col">Titulo</th>
                             <th scope="col">Cantidad</th>
                             <th scope="col">Valor Unitario</th>
