--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2 class="display-5 index__article__section1__titulo">Articulos destacados</h2>
             <div class="index__carousel">
 
-                <div id="carouselExample" class="carousel slide index__carousel__in">
+                <div id="carouselExample" class="carousel slide index__carousel__in container">
                     <div class="carousel-inner">
                         <div class="carousel-item active index__carousel__card">
                             <div class="card mb-3" style="max-width: 600px; min-width: 600px">
