--- a/paginas/login/login.html
+++ b/paginas/login/login.html
@@ -29,7 +29,7 @@
 
       <div class="card col-4 container-fluid">
         <div class="card-header">
-          Login | Libreria Virtual
+           <h1 class="fs-5">Login | BookZone</h1> 
         </div>
         <div class="card-body">
             <form>
