Se agrego el detalle producto

--- a/paginas/detalle-producto/detalleProducto.html
+++ b/paginas/detalle-producto/detalleProducto.html
@@ -65,7 +65,7 @@
         <div class="contenedor">
             <div class="columna">
                 <div class="container-img">
-                    <img class="cristy1" src="/public/imagenes/libro.png" alt="">
+                    <img class="cristy1" src=".../public/imagenes/libro.png" alt="">
                 </div>
             </div>
             <div class="columna">
