pasa todo lo viejo al directorio "old" y lo pone dentro del proyecto laravel

--- a/produccionWeb/old/paginas/login/login.html
+++ b/produccionWeb/old/paginas/login/login.html
@@ -8,7 +8,7 @@
 
 
      <!-- CSS  -->
-     <link rel="stylesheet" href="/style.css">
+     <link rel="stylesheet" href="/produccionWeb/oldduccionWeb/old/style.css">
 
 
       <!-- BOOTSTRAP  -->
@@ -25,11 +25,11 @@
 
     <div class="row">
 
- 
+
 
       <div class="card col-4 container-fluid">
         <div class="card-header">
-           <h1 class="fs-5">Login | BookZone</h1> 
+           <h1 class="fs-5">Login | BookZone</h1>
         </div>
         <div class="card-body">
             <form>
@@ -41,7 +41,7 @@
                   <label for="exampleInputPassword1">Contraseña</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
                 </div>
-              
+
                 <button type="submit" class="btn btn-warning">Ingresar</button>
               </form>
         </div>
@@ -57,6 +57,6 @@
 
 
 
-    
+
 </body>
 </html>
