--- a/produccionWeb/old/index.html
+++ b/produccionWeb/old/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/produccionWeb/old/style.css.css">
+    <link rel="stylesheet" href="/produccionWeb/old/index.css.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,10 +40,10 @@
                                     href="paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav__global__item" href="paginas/contacto/contacto.html">Contacto</a>
+                                <a class="nav-link nav__global__item" href="produccionWeb/paginas/contacto/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav__global__item" href="paginas/FAQ/FAQ.html">FAQ</a>
+                                <a class="nav-link nav__global__item" href="produccionWeb/paginas/FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
