--- a/produccionWeb/old/paginas/abm-administrador/ABMadministrador.html
+++ b/produccionWeb/old/paginas/abm-administrador/ABMadministrador.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./ABMadministrador.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="ABMadministrador.css">
+    <link rel="stylesheet" href="/produccionWeb/oldduccionWeb/old/style.css">
     <title>Admin</title>
 </head>
 
@@ -25,29 +25,29 @@
                     <div class="nav__global__container">
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/index.html"><img
-                                        src="/public/iconos/libro-abierto.png" alt=""></a>
+                                <a class="nav-link active" aria-current="page" href="/produccionWeb/oldduccionWeb/old/index.html"><img
+                                        src="/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item"
-                                    href="/paginas/productos/Productos.html">Productos</a>
+                                    href="/produccionWeb/paginasionWeb/paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item"
-                                    href="/paginas/contacto/contacto.html">Contacto</a>
+                                    href="/produccionWeb/old/paginas/contacto/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav__global__item" href="/paginas/FAQ/FAQ.html">FAQ</a>
+                                <a class="nav-link nav__global__item" href="/produccionWeb/old/paginas/FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
                             <li class="nav-item">
-                                <a class="nav-link" href="/paginas/perfil/Perfil.html"><img
-                                        src="/public/iconos/usuario.png" alt=""></a>
+                                <a class="nav-link" href="/produccionWeb/paginasionWeb/paginas/perfil/Perfil.html"><img
+                                        src="/iconos/usuario.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/paginas/carrito/Carrito.html"><img
-                                        src="/public/iconos/carrito-de-compras.png" alt=""></a>
+                                <a class="nav-link" href="/produccionWeb/paginasionWeb/paginas/carrito/Carrito.html"><img
+                                        src="/iconos/carrito-de-compras.png" alt=""></a>
                             </li>
                         </ul>
                     </div>
@@ -61,7 +61,7 @@
             <div class="ticket-table">
                 <div class="titulo-tabla">
                     <h3>Usuarios</h3>
-                    <img src="/public/iconos/plus.png" alt="plus to add item">
+                    <img src="/iconos/plus.png" alt="plus to add item">
                 </div>
                 <table class="table table-light table-striped">
                     <thead>
@@ -83,8 +83,8 @@
                             <td>Avenida Siempre Viva 742</td>
                             <td>11111111111</td>
                             <td>Cliente</td>
-                            <td><img class="edit-delete-icons" src="/public/iconos/edit.png" alt="pencil to edit"> <img
-                                    class="edit-delete-icons" src="/public/iconos/delete.png" alt="trash can to delete">
+                            <td><img class="edit-delete-icons" src="/iconos/edit.png" alt="pencil to edit"> <img
+                                    class="edit-delete-icons" src="/iconos/delete.png" alt="trash can to delete">
                             </td>
                         </tr>
                         <tr>
@@ -94,8 +94,8 @@
                             <td>Avenida Siempre Viva 742</td>
                             <td>11111111111</td>
                             <td>Cliente</td>
-                            <td><img class="edit-delete-icons" src="/public/iconos/edit.png" alt="pencil to edit"> <img
-                                    class="edit-delete-icons" src="/public/iconos/delete.png" alt="trash can to delete">
+                            <td><img class="edit-delete-icons" src="/iconos/edit.png" alt="pencil to edit"> <img
+                                    class="edit-delete-icons" src="/iconos/delete.png" alt="trash can to delete">
                             </td>
                         </tr>
                         <tr>
@@ -105,15 +105,15 @@
                             <td>Avenida Siempre Viva 742</td>
                             <td>11111111111</td>
                             <td>Admin</td>
-                            <td><img class="edit-delete-icons" src="/public/iconos/edit.png" alt="pencil to edit"> <img
-                                    class="edit-delete-icons" src="/public/iconos/delete.png" alt="trash can to delete">
+                            <td><img class="edit-delete-icons" src="/iconos/edit.png" alt="pencil to edit"> <img
+                                    class="edit-delete-icons" src="/iconos/delete.png" alt="trash can to delete">
                             </td>
                         </tr>
                     </tbody>
                 </table>
                 <div class="titulo-tabla">
                     <h3>Productos</h3>
-                    <img src="/public/iconos/plus.png" alt="plus to add item">
+                    <img src="/iconos/plus.png" alt="plus to add item">
                 </div>
                 <table class="table table-light table-striped">
                     <thead>
@@ -145,8 +145,8 @@
                             <td>Físico</td>
                             <td>img</td>
                             <td>4.5</td>
-                            <td class="acciones"><img class="edit-delete-icons" src="/public/iconos/edit.png"
-                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/public/iconos/delete.png"
+                            <td class="acciones"><img class="edit-delete-icons" src="/iconos/edit.png"
+                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/iconos/delete.png"
                                     alt="trash can to delete">
                             </td>
                         </tr>
@@ -162,8 +162,8 @@
                             <td>Audio Libro</td>
                             <td>img</td>
                             <td>4.5</td>
-                            <td class="acciones"><img class="edit-delete-icons" src="/public/iconos/edit.png"
-                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/public/iconos/delete.png"
+                            <td class="acciones"><img class="edit-delete-icons" src="/iconos/edit.png"
+                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/iconos/delete.png"
                                     alt="trash can to delete">
                             </td>
                         </tr>
@@ -179,8 +179,8 @@
                             <td>Físico</td>
                             <td>img</td>
                             <td>4.5</td>
-                            <td class="acciones"><img class="edit-delete-icons" src="/public/iconos/edit.png"
-                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/public/iconos/delete.png"
+                            <td class="acciones"><img class="edit-delete-icons" src="/iconos/edit.png"
+                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/iconos/delete.png"
                                     alt="trash can to delete">
                             </td>
                         </tr>
@@ -189,7 +189,7 @@
 
                 <div class="titulo-tabla">
                     <h3>Revisiones</h3>
-                    <img src="/public/iconos/plus.png" alt="plus to add item">
+                    <img src="/iconos/plus.png" alt="plus to add item">
                 </div>
                 <table class="table table-light table-striped">
                     <thead>
@@ -211,8 +211,8 @@
                             <td>4.5</td>
                             <td>1</td>
                             <td>2</td>
-                            <td class="acciones"><img class="edit-delete-icons" src="/public/iconos/edit.png"
-                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/public/iconos/delete.png"
+                            <td class="acciones"><img class="edit-delete-icons" src="/iconos/edit.png"
+                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/iconos/delete.png"
                                     alt="trash can to delete">
                             </td>
                         </tr>
@@ -223,8 +223,8 @@
                             <td>4.5</td>
                             <td>1</td>
                             <td>2</td>
-                            <td class="acciones"><img class="edit-delete-icons" src="/public/iconos/edit.png"
-                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/public/iconos/delete.png"
+                            <td class="acciones"><img class="edit-delete-icons" src="/iconos/edit.png"
+                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/iconos/delete.png"
                                     alt="trash can to delete">
                             </td>
                         </tr>
@@ -235,8 +235,8 @@
                             <td>4.5</td>
                             <td>1</td>
                             <td>2</td>
-                            <td class="acciones"><img class="edit-delete-icons" src="/public/iconos/edit.png"
-                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/public/iconos/delete.png"
+                            <td class="acciones"><img class="edit-delete-icons" src="/iconos/edit.png"
+                                    alt="pencil to edit"> <img class="edit-delete-icons" src="/iconos/delete.png"
                                     alt="trash can to delete">
                             </td>
                         </tr>
