--- a/produccionWeb/old/paginas/historial-pedidos/HistorialPedidos.html
+++ b/produccionWeb/old/paginas/historial-pedidos/HistorialPedidos.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./HistorialPedidos.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="HistorialPedidos.css">
+    <link rel="stylesheet" href="/produccionWeb/oldduccionWeb/old/style.css">
 
 
     <title>Pedidos</title>
@@ -32,29 +32,29 @@
                     <div class="nav__global__container">
                         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/index.html"><img
-                                        src="/public/iconos/libro-abierto.png" alt=""></a>
+                                <a class="nav-link active" aria-current="page" href="/produccionWeb/oldduccionWeb/old/index.html"><img
+                                    src="/iconos/libro-abierto.png" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item"
-                                    href="/paginas/productos/Productos.html">Productos</a>
+                                    href="/produccionWeb/paginasionWeb/paginas/productos/Productos.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav__global__item"
-                                    href="/paginas/contacto/contacto.html">Contacto</a>
+                                    href="/produccionWeb/old/paginas/contacto/contacto.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav__global__item" href="/paginas/FAQ/FAQ.html">FAQ</a>
+                                <a class="nav-link nav__global__item" href="/produccionWeb/old/paginas/FAQ/FAQ.html">FAQ</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav mr-auto mb-2 mb-lg-0  nav__global__icons d-flex">
                             <li class="nav-item">
-                                <a class="nav-link" href="/paginas/perfil/Perfil.html"><img
-                                        src="/public/iconos/usuario.png" alt=""></a>
+                                <a class="nav-link" href="/produccionWeb/paginasionWeb/paginas/perfil/Perfil.html"><img
+                                    src="/iconos/usuario.png" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/paginas/carrito/Carrito.html"><img
-                                        src="/public/iconos/carrito-de-compras.png" alt=""></a>
+                                <a class="nav-link" href="/produccionWeb/paginasionWeb/paginas/carrito/Carrito.html"><img
+                                    src="/iconos/carrito-de-compras.png" alt=""></a>
                             </li>
                         </ul>
                     </div>
